fix z-index

--- a/src/style/components/_burger-btn.sass
+++ b/src/style/components/_burger-btn.sass
@@ -6,18 +6,18 @@ $nav-burger-line-width: $nav-burger-size * 0.4
 /** Dangerous math ahead. Touch with care */
 $nav-burger-line-left: ($nav-burger-size - $nav-burger-line-width) * 0.5
 $nav-burgerLine-top-offset:    ($nav-burger-size - ($nav-burger-inner-size)) * 0.5
-$nav-burgerLine-middle-offset: $nav-burgerLine-top-offset + ($nav-burger-inner-size * 0.5)
-$nav-burgerLine-bottom-offset: $nav-burgerLine-top-offset + ($nav-burger-inner-size)
+$nav-burgerLine-middle-offset: $nav-burgerLine-top-offset + $nav-burger-inner-size * 0.5)
+$nav-burgerLine-bottom-offset: $nav-burgerLine-top-offset + $nav-burger-inner-size)
 
 .BurgerBtn
-  +navBtn-layer
+  
   pointer-events: all
   position: relative
   width: $nav-burger-size
   height: $nav-burger-size
   display: block
   border-radius: 50%
-  +transition(all 0.3s)
+  
   cursor: pointer
   opacity: 0.95
   background-color: $color-green
@@ -27,8 +27,8 @@ $nav-burgerLine-bottom-offset: $nav-burgerLine-top-offset + ($nav-burger-inner-s
   border: 0
 
   &:before
-    +font-text
-    +transition(all 0.3s)
+    
+    
     height: $nav-burger-size
     line-height: $nav-burger-size
     text-align: right
@@ -49,16 +49,17 @@ $nav-burgerLine-bottom-offset: $nav-burgerLine-top-offset + ($nav-burger-inner-s
     display: block
     width: 200px
     margin-left: -210px
+    z-index: 1000
 
 .BurgerBtn-line
-  +transition(all 0.3s)
+  
   position: absolute
   display: block
   left: $nav-burger-line-left
   height: $nav-burger-line-height
   width: $nav-burger-line-width
   background-color: $color-white
-  box-shadow: 0px 0px 1px $color-white
+  box-shadow: 0px 0px 1px color-white
 
   &:nth-child(1)
     top: $nav-burgerLine-top-offset
